<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="false"
    tools:context=".CreateDeck">

    <include
        android:id="@+id/create_toolbar"
        layout="@layout/create_toolbar" />

    <Button
        android:id="@+id/cancelBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="16dp"
        android:background="@android:color/transparent"
        android:alpha="1.0"
        android:text="@string/cancel"
        app:layout_constraintBottom_toBottomOf="@+id/create_toolbar"
        app:layout_constraintEnd_toStartOf="@+id/createDeckBtn"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/create_toolbar"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/createDeckBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:layout_marginEnd="16dp"
        android:background="@android:color/transparent"
        android:alpha="0.5"
        android:text="@string/create"
        app:layout_constraintBottom_toBottomOf="@+id/create_toolbar"
        app:layout_constraintEnd_toEndOf="@+id/create_toolbar"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/createDeckTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/create_deck"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/create_toolbar"
        app:layout_constraintEnd_toStartOf="@+id/createDeckBtn"
        app:layout_constraintStart_toEndOf="@+id/cancelBtn"
        app:layout_constraintTop_toTopOf="@+id/create_toolbar" />

    <android.support.v7.widget.CardView
        android:id="@+id/createDeckCard"
        android:backgroundTint="#C4C4C4"
        android:layout_width="339dp"
        android:layout_height="299dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.517"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/create_toolbar"
        app:layout_constraintVertical_bias="0.343">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/deckName">

            </android.support.design.widget.TextInputLayout>

            <EditText
                android:id="@+id/deckName"
                android:maxLines="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="18dp"
                android:layout_alignParentStart="true"
                android:layout_marginLeft="18dp"
                android:layout_marginRight="18dp"
                android:ems="10"
                android:inputType="text"
                android:hint="@string/name" />

            <EditText
                android:id="@+id/cardDescription"
                android:gravity="start"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="18dp"
                android:layout_marginRight="18dp"
                android:layout_marginTop="79dp"
                android:ems="10"
                android:hint="@string/description"
                android:inputType="text" />
        </RelativeLayout>

    </android.support.v7.widget.CardView>


</android.support.constraint.ConstraintLayout>