<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.constraint.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".CreateCard">

        <include
            android:id="@+id/create_toolbar"
            layout="@layout/create_toolbar" />

        <Button
            android:id="@+id/doneBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="16dp"
            android:alpha="1.0"
            android:background="@android:color/transparent"
            android:text="@string/done"
            app:layout_constraintBottom_toBottomOf="@+id/create_toolbar"
            app:layout_constraintEnd_toStartOf="@+id/createCardBtn"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/create_toolbar"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0"
            android:onClick="onClick"/>

        <Button
            android:id="@+id/createCardBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:layout_marginEnd="16dp"
            android:alpha="0.5"
            android:background="@android:color/transparent"
            android:text="@string/create"
            app:layout_constraintBottom_toBottomOf="@+id/create_toolbar"
            app:layout_constraintEnd_toEndOf="@+id/create_toolbar"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0" />

        <TextView
            android:id="@+id/createCardTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/create_card"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@+id/create_toolbar"
            app:layout_constraintEnd_toStartOf="@+id/createCardBtn"
            app:layout_constraintStart_toEndOf="@+id/doneBtn"
            app:layout_constraintTop_toTopOf="@+id/create_toolbar" />


        <android.support.v7.widget.CardView
            android:id="@+id/createDeckCard"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="15dp"
            android:backgroundTint="#C4C4C4"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.517"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/create_toolbar"
            app:layout_constraintVertical_bias="0.0">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="313dp">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/cardFrontET">

                </android.support.design.widget.TextInputLayout>

                <EditText
                    android:id="@+id/cardFrontET"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginLeft="18dp"
                    android:layout_marginRight="18dp"
                    android:layout_marginTop="18dp"
                    android:background="@android:color/transparent"
                    android:ems="10"
                    android:focusable="true"
                    android:gravity="start"
                    android:hint="@string/card_front"
                    android:inputType="textMultiLine">

                    <requestFocus />
                </EditText>

                <EditText
                    android:id="@+id/cardBackET"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginLeft="18dp"
                    android:layout_marginRight="18dp"
                    android:layout_marginTop="169dp"
                    android:background="@android:color/transparent"
                    android:ems="10"
                    android:gravity="start"
                    android:hint="@string/card_back"
                    android:inputType="textMultiLine" />

                <View
                    android:id="@+id/divider"
                    android:layout_width="368dp"
                    android:layout_height="2dp"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="142dp"
                    android:background="#1057c9" />

            </RelativeLayout>

        </android.support.v7.widget.CardView>

    </android.support.constraint.ConstraintLayout>

</ScrollView>